allow source directory customization by setting it as a program argument